# pyapp

./: .gitignore  README.md  pyproject.toml  verify.py
.github/workflows/: build-stub.yml  release.yml
docs/: ANDROID_SOLUTION.md  project-github-best-practices.md  pyapp-compile-refactor.md  windows-launcher-design.md  windows-stub-precompile-proposal.md  基于 Python 运行时的跨平台应用打包方案 (Specification v2.0).md  跨平台打包工具设计方案.md
pyapp/: __init__.py  __main__.py  cli.py
pyapp/commands/: __init__.py  build.py  compile.py  create.py  deploy.py  dev.py  init.py  logs.py  package.py  run.py  setup.py
pyapp/core/: __init__.py  builder.py  cache.py  config.py  device.py  errors.py  logger.py  runtime.py  watcher.py
pyapp/stubs/windows/: .gitkeep
pyapp/templates/ci/: build-android.yml.j2  build-linux.yml.j2  build-windows.yml.j2  termux_compile.sh.j2
pyapp/templates/project/: pyproject.toml.j2
pyapp/templates/shells/android/: build.gradle.kts.j2  gradle.properties  gradlew  settings.gradle.kts.j2
pyapp/templates/shells/android/app/: build.gradle.kts.j2
pyapp/templates/shells/android/app/src/main/: AndroidManifest.xml.j2
pyapp/templates/shells/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
pyapp/templates/shells/android/app/src/main/res/values/: strings.xml.j2  themes.xml.j2
pyapp/templates/shells/linux/: app.service.j2  install.sh.j2  run.sh.j2
pyapp/templates/shells/windows/: WebView2.h  app.ini.j2  app_stub.c.j2  app_stub.cpp.j2  app_stub.rc.j2  build.bat.j2
pyapp_runtime/: README.md  __init__.py  lifecycle.py  pyproject.toml  server.py
pyapp_runtime/tests/: test_e2e_shutdown.py  test_lifecycle.py  test_server.py
stub-src/windows/: WebView2.h  app_stub.cpp
