[project]
name = "pyapp-cli"
dynamic = ["version"]
description = "跨平台打包工具 - 一份 Python 代码，一行命令，三平台安装包"
authors = [{name = "Developer", email = "dev@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "requests>=2.28.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
compile = [
    "nuitka==2.7.12",
    "ordered-set",
    "zstandard",
]

[project.scripts]
pyapp = "pyapp.cli:main"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pyapp/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyapp", "pyapp.*"]

[tool.setuptools.package-data]
pyapp = [
    "templates/**/*",
    "stubs/**/*",
]

[tool.setuptools.exclude-package-data]
pyapp = ["stubs/**/*.pdb"]
